# AcousticTracer

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  proposal.tex
assets/glb/: L_room.gltf  L_room_roof.glb  box_room.gltf  box_room_roof.glb
backend/net/: at_net.c  at_net.h
contributors/: patrykmrozek.md
core/: CMakeLists.txt  doxygen_config
core/dev/: test_aabb.c  test_model.c  test_model_ray.c  test_net.c  test_ray_init.c  test_ray_reflect.c
core/dev/bvh/: test_tri_group.c
core/include/acoustic/: at.h  at_math.h  at_model.h  at_ray.h  at_result.h  at_scene.h  at_simulation.h
core/src/: at.h  at_aabb.c  at_aabb.h  at_bvh.c  at_bvh.h  at_internal.h  at_minitree.h  at_model.c  at_ray.c  at_ray.h  at_scene.c  at_scene.h  at_simulation.c  at_trigroup.c  at_trigroup.h  at_utils.h
docs/: README.md  c_conventions.md  communication_standards.md  workflow.md
docs/core/html/: annotated.html  annotated_dup.js  at_8h.html  at_8h.js  at_8h_source.html  at__bvh_8h_source.html  at__math_8h.html  at__math_8h.js  at__math_8h_source.html  at__model_8h.html  at__model_8h_source.html  at__ray_8h_source.html  at__scene_8h.html  at__scene_8h.js  at__scene_8h_source.html  at__simulation_8h.html  at__simulation_8h.js  at__simulation_8h_source.html  at__utils_8h_source.html  at__voxel_8h_source.html  classes.html  dir_32685ae3843b5ca2e1d1062cb00ef9fd.html  dir_32685ae3843b5ca2e1d1062cb00ef9fd.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js  search.php  (+12 more)
docs/core/html/search/: search.idx
web/: .env  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  Login.css  index.css  main.tsx  styles.css
web/src/api/: auth.ts  contracts.ts  simulations.ts
web/src/app/: app.tsx  provider.tsx  router.tsx
web/src/components/: ConfigPanel.tsx  SimDetails.tsx  UploadForm.css  UploadForm.tsx  feature-error-boundary.tsx  main-error-fallback.tsx
web/src/features/auth/context/: user-store.tsx
web/src/features/auth/routes/: login.tsx
web/src/features/simulation/api/: simulation-repository.ts  use-simulation-hooks.ts
web/src/features/simulation/components/: bbox-helper.tsx  config-panel.tsx  scene-viewer.tsx  upload-form.tsx  voxel-grid.tsx
web/src/features/simulation/routes/: dashboard.tsx  scene.tsx
web/src/features/simulation/stores/: scene-store.ts
web/src/features/simulation/types/: index.ts
web/src/features/simulation/utils/: adapter.ts
web/src/lib/: query-keys.ts
web/src/lib/context/: user.tsx
web/src/pages/: Dashboard.css  Dashboard.tsx  Home.css  Home.tsx  Login.tsx  Scene.tsx  index.ts  useSceneStores.ts
web/src/r3f/: BoundBoxHelper.tsx  SceneCanvas.tsx  VoxelInstancedMesh.tsx
web/src/stores/: useSceneStores.ts
web/src/types/: meta.ts
